--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -23,6 +23,21 @@
         android:background="@color/transparent"
         android:tint="?attr/colorAccent" />
 
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/simulate_example_query"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Execute example query"
+        android:contentDescription="Search for recommended media of swimming animals"
+        android:textColor="@color/black"
+        android:textAlignment="center"
+        android:textSize="22sp"
+        android:padding="20dp"
+        app:layout_constraintTop_toBottomOf="@id/talk_button"
+        app:layout_constraintBottom_toTopOf="@id/query_text"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/query_text"
         android:layout_width="match_parent"
@@ -31,7 +46,8 @@
         android:textColor="@color/black"
         android:textAlignment="center"
         android:textSize="22sp"
-        app:layout_constraintTop_toBottomOf="@id/talk_button"
+        android:padding="20dp"
+        app:layout_constraintTop_toBottomOf="@id/simulate_example_query"
         app:layout_constraintBottom_toTopOf="@id/loading_progress"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
